# tqqq-200-sma

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: last_updated.json
.github/workflows/: README.md  daily-signal.yml  test.yml
backtesting/: README.md  backtest.py
data/: market_data_cache.pkl  position_state.json
scripts/: __init__.py  clean-cached-data.sh  clean.py  clean.sh  clean_data.py  format.py
src/: __init__.py  calculations.py  charts.py  config.py  data_fetcher.py  logger.py  main.py  state_manager.py
tests/: __init__.py  conftest.py  test_calculations.py  test_data_io.py  test_data_validation.py  test_formatting.py  test_output_format.py  test_signal_logic.py  test_state_management.py  test_yfinance_api.py
