[project]
name = "tqqq-sma"
version = "0.1.0"
description = "TQQQ trading signal script based on QQQ 200-day SMA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "yfinance>=0.2.66",
    "plotly>=5.24.1",
]

[project.scripts]
tqqq-sma = "main:main"

[tool.uv]
package = true
