[project]
name = "tqqq-sma"
version = "0.1.0"
description = "TQQQ trading signal script based on QQQ 200-day SMA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "yfinance>=0.2.66",
    "plotly>=5.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
tqqq-sma = "src.main:main"
format = "scripts.format:main"
clean = "scripts.clean:main"
clean-data = "scripts.clean_data:main"

[tool.uv]
package = true
